/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package talpe;

import java.util.ArrayList;
import java.util.Timer;

/**
 *
 * @author lleshi.alessandro
 */
public class GestoreGioco {
    private Timer t;
    private Talpa mole = new Talpa();
    private Giocatore gamer = new Giocatore("giocatore 1", 0);
    private ArrayList<Buca> holes = new ArrayList();
    private Classifica calssific = new Classifica();
    
    
}
