/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package talpe;

/**
 *
 * @author lleshi.alessandro
 */
public class Giocatore {
    private String name;
    private int points;

    public Giocatore(String name, int points) {
        this.name = name;
        this.points = points;//all inizio 0
    }
    
    public boolean tryHit(){
        
        return false;
    }
}
