/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package talpe;

import java.time.LocalTime;

/**
 *
 * @author lleshi.alessandro
 */
public class Talpa implements Runnable{
    private int pointValue;
    private boolean hit;
    private LocalTime timeOut;
    private TypeOfMole type;
    private LocalTime ritorna;
    
    
    @Override
    public void run(){
        
    }
    
}
